# lmdb-viewer

./: Cargo.toml  README.md  meson.build  meson_options.txt
.github/workflows/: ci.yml
build-aux/: io.github.seadve.LmdbViewer.Devel.json
data/: io.github.seadve.LmdbViewer.desktop.in.in  io.github.seadve.LmdbViewer.gschema.xml.in  io.github.seadve.LmdbViewer.metainfo.xml.in.in
data/resources/: resources.gresource.xml
data/resources/ui/: window.ui
po/: POTFILES.in
src/: application.rs  database.rs  database_item.rs  main.rs  window.rs
