[package]
name = "lmdb-viewer"
version = "0.1.0"
authors = ["Dave Patrick Caberto"]
edition = "2021"

[dependencies]
adw = { package = "libadwaita", version = "0.5", features = ["v1_4"] }
anyhow = "1.0"
gettext-rs = { version = "0.7", features = ["gettext-system"] }
gtk = { version = "0.7", package = "gtk4", features = ["gnome_45"] }
heed = "0.20.0-alpha.6"
indexmap = "2.0"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
